# csci344

./: .gitignore  index.html
homework/hw02/: follow.html  index.html  more.html  post.html  signout.html  styles.css
homework/hw03/: index.html  package-lock.json
homework/hw03/js/: main.js
homework/hw03/public/: output.css
homework/hw04/: package-lock.json
homework/hw05/: README.md
homework/hw06/: .gitignore  app.py  decorators.py  users.csv
lectures/intro-to-react/: package-lock.json  package.json
lectures/lecture04/: index.html
lectures/lecture06/: styles.css
lectures/lecture12/: 00-example-callback-functions.js  02-map-demo.js  03-filter-demo.js
lectures/lecture13/: 03-filter-demo.js  06-practice.js
lectures/lecture22/: .env  README.md  app.py  pyproject.toml  tester.py  users.csv  utils.py
lectures/lecture22/models/: __init__.py  bookmark.py  post.py
lectures/lecture22/templates/: restaurant.html
lectures/lecture22/utilities/: account_utilities.py
practicequizzes/: practice.js
practicequizzes/exercise02/: main.js
quizzes/quiz01/: index.html  styles.css
quizzes/quiz02/: index.html
tutorials/tutorial01/: index.html  music.html  videos.html
tutorials/tutorial03/: get-creative.html  index.html  package-lock.json  package.json  tailwind.config.js
tutorials/tutorial04/: main.js
tutorials/tutorial05/: index.html
tutorials/tutorial06/: main.js
tutorials/tutorial08/: package-lock.json  package.json
tutorials/tutorial09/: README.md  app.py  pyproject.toml
tutorials/tutorial10/: answers.sql  short-answer-questions.txt
(+106 files in other folders)
